--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.479.0",
+    "motion": "^12.4.10",
     "next": "15.2.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
