--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@studio-freight/lenis": "^1.0.42",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.8",
     "lucide-react": "^0.479.0",
     "motion": "^12.4.10",
     "next": "15.2.0",
